# tcc-experiments

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  mise.toml  requirements.txt  results_cubic_lb_up.csv  results_dimacs_lb_up.csv  results_hb_lb_ub.csv
cmake/: CompilerWarnings.cmake  OpenMP.cmake  Optimize.cmake  Options.cmake  TccLinkCompileCommands.cmake  TccProjectSetup.cmake
data/: instances_metadata_DIMACS_HB.json
data/instances/CUBIC/: cubic_100.col  cubic_1000.col  cubic_1100.col  cubic_1200.col  cubic_1300.col  cubic_1400.col  cubic_1500.col  cubic_1600.col  cubic_1700.col  cubic_1800.col  cubic_1900.col  cubic_200.col  cubic_2000.col  cubic_2100.col  cubic_2200.col  cubic_2300.col  cubic_2400.col  cubic_2500.col  cubic_2600.col  cubic_2700.col  cubic_2800.col  cubic_2900.col  cubic_300.col  cubic_3000.col  cubic_400.col  cubic_500.col  cubic_600.col  cubic_700.col  cubic_800.col  cubic_900.col
data/instances/DIMACS/: 001_keller5.txt  005_DSJC125.9.txt  007_brock800_2.txt  009_p_hat700-2.txt  012_san200_0.9_2.txt  019_brock400_4.txt  020_DSJR500.1c.txt  023_p_hat700-1.txt  024_DSJC1000.1.txt  026_miles500.txt  027_queen12_12.txt  028_miles250.txt  029_queen6_6.txt  032_zeroin.i.3.txt  035_myciel3.txt  036_DSJC250.1.txt  038_fpsol2.i.2.txt  039_queen16_16.txt  040_fpsol2.i.1.txt  042_DSJC250.5.txt  046_c-fat500-1.txt  047_le450_5d.txt  048_DSJC500.1.txt  049_san400_0.5_1.txt  050_sanr400_0.5.txt  C250.9.txt  DSJC1000.5.txt  DSJC1000.9.txt  DSJC125.1.txt  MANN_a9.txt  brock200_3.txt  flat1000_50_0.col  flat300_28_0.col  gen400_p0.9_55.txt  hamming10-4.txt  hamming8-2.txt  inithx.i.3.txt  johnson8-2-4.txt  latin_square_10.txt  le450_25c.txt  (+10 more)
data/instances/HB/: 1138_bus.col  662_bus.col  bcspwr03.col  bcspwr06.col  bcspwr10.col  bcsstk03.col  bcsstk04.col  bcsstk06.col  bcsstk09.col  bcsstk11.col  bcsstk13.col  bcsstk15.col  bcsstk19.col  bcsstk20.col  bcsstk21.col  bcsstk22.col  bcsstk23.col  bcsstk24.col  bcsstk26.col  bcsstm03.col  bcsstm04.col  bcsstm06.col  bcsstm19.col  bcsstm20.col  bcsstm26.col  bcsstm27.col  bfw782b.col  can_1054.col  can_144.col  can_187.col  can_229.col  can_268.col  can_838.col  dwt_1005.col  dwt_198.col  dwt_245.col  dwt_307.col  dwt_346.col  dwt_361.col  dwt_419.col  (+16 more)
data/instances/Harwell–Boeing/: 003_nos7.txt  004_dwt_1007.txt  006_dwt__918.txt  007_sherman1.txt  008_bcspwr05.txt  010_mhd3200b.txt  014_dwt_1242.txt  016_jagmesh6.txt  017_blckhole.txt  018_dwt___72.txt  024_can__229.txt  025_can__161.txt  028_can___61.txt  030_lshp_406.txt  032_plskz362.txt  034_dwt__607.txt  039_dwt__346.txt  041_dwt__869.txt  043_bcsstk09.txt  046_bcsstk16.txt  049_bcsstm27.txt  050_dwt__234.txt  arc130.txt  bcsstk05.txt  bcsstk07.txt  bcsstk08.txt  bcsstk10.txt  bcsstk21.txt  bcsstm07.txt  bcsstm12.txt  can_1072.txt  can_634.txt  can_715.txt  can_73.txt  can_96.txt  dwt_245.txt  dwt_361.txt  dwt_492.txt  dwt_59.txt  dwt_66.txt  (+10 more)
data/instances/Random-Cubic/: cubic_100.txt  cubic_1000.txt  cubic_1100.txt  cubic_1200.txt  cubic_1300.txt  cubic_1400.txt  cubic_1500.txt  cubic_1600.txt  cubic_1700.txt  cubic_1800.txt  cubic_1900.txt  cubic_200.txt  cubic_2000.txt  cubic_2100.txt  cubic_2200.txt  cubic_2300.txt  cubic_2400.txt  cubic_2500.txt  cubic_2600.txt  cubic_2700.txt  cubic_2800.txt  cubic_2900.txt  cubic_300.txt  cubic_3000.txt  cubic_400.txt  cubic_500.txt  cubic_600.txt  cubic_700.txt  cubic_800.txt  cubic_900.txt
docs/: ARCHITECTURE.md  BUILD.md  GRAPH.md  METAHEURISTICS.md
experiments/configs/: default.json
experiments/tuning/: instances-list.txt
experiments/tuning/aco_ts/: output.tuning.txt  parameters.txt  scenario.txt  target-runner
experiments/tuning/brkga/: parameters.txt
experiments/tuning/hho_rvns/: parameters.txt  scenario.txt  target-runner
metaheuristic/: app_stub_common.hpp  brkga_main.cpp  graph.cpp  graph.hpp  hho_rvns_main.cpp
metaheuristics/: aco_ts_main.cpp  app_stub_common.hpp  decoder.hpp  graph.cpp
pli_model/: __init__.py  heuristics.py  run.py  solve.py
pli_model/cli/: run.py
pli_model/io/: __init__.py  instance_reader.py  result_writer.py
python/pli/: model.py  solve.py
python/pli/io/: __init__.py  instance_reader.py
python/scripts/analysis/: csv_to_latex_table.py
python/scripts/utils/: add_graph_bounds.py  select_tuning_instances.py
results/experiments/aco_ts_stagnation1000_vs_pli_incremental_greedy/: 1138_bus.json  662_bus.json  DSJC1000.1.json  DSJC1000.5.json  DSJC1000.9.json  DSJC125.5.json  DSJC500.5.json  DSJC500.9.json  DSJR500.1.json  bcspwr03.json  bcspwr06.json  bcspwr10.json  bcsstk03.json  bcsstk04.json  bcsstk06.json  bcsstk09.json  bcsstk11.json  bcsstk13.json  bcsstk15.json  bcsstk19.json  bcsstk20.json  bcsstk21.json  bcsstk22.json  bcsstk23.json  bcsstk24.json  bcsstk26.json  bcsstm03.json  bcsstm04.json  bcsstm06.json  bcsstm19.json  bcsstm20.json  bcsstm26.json  bcsstm27.json  bfw782b.json  brock200_3.json  brock800_3.json  brock800_4.json  c-fat200-1.json  c-fat200-5.json  c-fat500-1.json  (+97 more)
results/experiments/aco_ts_stagnation1000_vs_pli_mapping_fix/: 1138_bus.json  662_bus.json  DSJC1000.1.json  DSJC1000.5.json  DSJC1000.9.json  DSJC125.5.json  DSJC500.5.json  DSJC500.9.json  DSJR500.1.json  bcspwr03.json  bcspwr06.json  brock200_3.json  brock800_3.json  brock800_4.json  c-fat200-1.json  c-fat200-5.json  c-fat500-1.json  cubic_100.json  cubic_1000.json  cubic_1100.json  cubic_1200.json  cubic_1300.json  cubic_1400.json  cubic_1500.json  cubic_1600.json  cubic_1700.json  cubic_1800.json  cubic_1900.json  cubic_200.json  cubic_2000.json  cubic_2100.json  cubic_2200.json  cubic_2300.json  cubic_2400.json  cubic_2500.json  cubic_2600.json  cubic_2700.json  cubic_2800.json  (+47 more)
scripts/: analise.py  analise_pli.py  calculate_lb_ub.py  clean_csv.py  csv_to_latex.py  mesclar_resultados.py  mtx_to_col.py  update_lb_ub.py  verificar_isolados.py
src/: README.md
src/runners/: aco_ts_runner.cpp  brkga_mp_ipr_runner.cpp  brkga_runner.cpp  hho_rvns_runner.cpp
tables/: cubicos_p3dr.tex  dimacs_p3dr.tex  harwell_boeing_p3dr.tex
(+26 files in other folders)
